--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,39 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.prj_tardirgrado">
+    package="com.example.prjmobiletcc">
 
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="Tartigrado"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Prj_Tardirgrado"
+        android:theme="@style/Theme.PrjMobileTCC"
         tools:targetApi="31">
-        <activity
-            android:name=".TelaCarrinhoProduto"
-            android:exported="false" />
-        <activity
-            android:name=".TelaCheckout"
-            android:exported="false" />
-        <activity
-            android:name=".TelaPagamento"
-            android:exported="false" />
-        <activity
-            android:name=".TelaProdutoIndividual"
-            android:exported="false" />
-        <activity
-            android:name=".TelaCatalogoProduto"
-            android:exported="false" />
-        <activity
-            android:name=".TelaLogin"
-            android:exported="false" />
-        <activity
-            android:name=".TelaCarregamento"
-            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
