--- a/settings.gradle
+++ b/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "Prj_Tardirgrado"
+rootProject.name = "PrjMobileTCC"
 include ':app'
